# helr

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  hel.yaml  helr.yaml
.github/workflows/: ci.yml  docker.yml  publish.yml  release-binaries.yml
docs/: README.md  andromeda.md  audit.md  github.md  gws-gcp-manual.md  gws-gcp.md  hooks.md  okta-manual.md  okta.md  rest-api.md  slack.md  tailscale.md
docs/integrations/: 1password.md  andromeda.md  github.md  gws-gcp.md  okta.md  slack.md  tailscale.md
hooks/: andromeda-audit.js
mocks/: gws.yaml  okta.yaml
src/: andromeda.rs  api.rs  audit.rs  circuit.rs  client.rs  config.rs  dedupe.rs  dpop.rs  event.rs  health.rs  hooks.rs  login_cookie.rs  main.rs  metrics.rs  mock_server.rs  oauth2.rs  output.rs  pagination.rs  poll.rs  replay.rs  retry.rs  state.rs
src/config/: auth.rs  global.rs  mod.rs  pagination.rs  resilience.rs  source.rs
src/poll/: cursor.rs  helpers.rs  hooks.rs  link_header.rs  mod.rs  page_offset.rs  parse.rs  single_page.rs  streaming.rs
support/: archive-release.sh
tests/: integration.rs  integration_testcontainers.rs
