[package]
name = "hel"
version = "0.1.0"
edition = "2024"
description = "Generic HTTP API log collector: polls APIs and emits NDJSON to stdout"
license = "MIT OR Apache-2.0"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
reqwest = { version = "0.13", features = ["json", "form"] }
rusqlite = { version = "0.38", features = ["bundled"] }
anyhow = "1.0"
async-trait = "0.1"
shellexpand = "3.1"
base64 = "0.22"
chrono = "0.4"
rand = "0.9"
axum = { version = "0.8", features = ["macros", "json"] }
prometheus = "0.14"
once_cell = "1.21"
nix = { version = "0.28", features = ["signal"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
wiremock = "0.5"
serde_json = "1.0"
nix = { version = "0.28", features = ["signal", "process"] }
reqwest = { version = "0.13", features = ["json"] }
